plugins {
    id 'java'
    id 'application'
    id 'com.gradleup.shadow' version '9.0.2'
}

group = 'com.puhovin'
version = '2.0'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

dependencies {
    implementation 'org.slf4j:slf4j-api:2.0.17'
    implementation 'ch.qos.logback:logback-classic:1.5.18'

    compileOnly 'org.projectlombok:lombok:1.18.38'
    annotationProcessor 'org.projectlombok:lombok:1.18.38'
    testCompileOnly 'org.projectlombok:lombok:1.18.38'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.38'

    testImplementation 'org.junit.jupiter:junit-jupiter:5.13.4'
    testImplementation 'org.mockito:mockito-core:5.19.0'
    testImplementation 'org.awaitility:awaitility:4.3.0'
}

application {
    mainClass = 'com.puhovin.lampalauncher.LampaLauncherApplication'
}

test {
    useJUnitPlatform()

    testLogging {
        events "PASSED", "FAILED", "SKIPPED"
    }
}

shadowJar {
    archiveClassifier.set('with-dependencies')
    minimize()
    manifest {
        attributes 'Main-Class': application.mainClass
    }
}

wrapper {
    distributionType = Wrapper.DistributionType.BIN
    gradleVersion = '9.0.0'
}
